--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <!--puroerror style-->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
   <link rel="stylesheet" href="style.css">
-  <title>Document</title>
+  <title>About me</title>
 </head>
 <body>
     <!--header-->
